--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-markdown": "^8.0.7"
   },
   "devDependencies": {
     "eslint": "8.25.0",
